general optimizations to MTD, no longer change backing storage